blog: upgrade layout to hugo 0.146

--- a/blog/themes/xmin/layouts/_partials/header.html
+++ b/blog/themes/xmin/layouts/_partials/header.html
@@ -4,12 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ .Title }} | {{ .Site.Title }}</title>
-    <link rel="icon" href="data:;base64,=" />
-    <link rel="stylesheet" href="{{ "/css/style.css" | relURL }}" />
-    <link rel="stylesheet" href="{{ "/css/fonts.css" | relURL }}" />
-    {{ range .AlternativeOutputFormats -}}
-        {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
-    {{ end -}}
+    <style>{{ readFile "static/css/style.css" | safeCSS }}</style>
     {{ partial "head_custom.html" . }}
   </head>
 
