--- a/blog/themes/xmin/layouts/home.html
+++ b/blog/themes/xmin/layouts/home.html
@@ -1,15 +1,9 @@
 {{ partial "header.html" . }}
 
-{{if not .IsHome }}
-<h1>{{ .Title | markdownify }}</h1>
-{{ end }}
-
 {{ .Content }}
 
 <ul style="list-style: none;padding: 0">
-  {{ $pages := .Pages }}
-  {{ if .IsHome }}{{ $pages = .Site.RegularPages }}{{ end }}
-  {{ range (where $pages "Section" "!=" "") }}
+  {{ range (where .Site.RegularPages "Section" "!=" "") }}
   <li>
     <time datetime={{ .Date.Format "2006-01-02" }}>{{ .Date.Format "2006/01/02" }}</time>
     <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a>
